// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`enzyme-riot-adapter staticTag should match snapshot 1`] = `
<static
  data-is={
    [
      "static",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</static>
`;

exports[`enzyme-riot-adapter tagWithOpts should match snapshot 1`] = `
<tag
  data-is={
    [
      "tag",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</tag>
`;
